# sourcemodel

./: CMakeLists.txt  README.md
src/: .clang-format  CMakeLists.txt
src/app/: Application.cpp  Application.h  CMakeLists.txt  CachedGlottalFlowModel.cpp  CachedGlottalFlowModel.h  FilterSpectrum.cpp  FilterSpectrum.h  FormantGenerator.cpp  FormantGenerator.h  GeneratorSpectrum.cpp  GeneratorSpectrum.h  GlottalFlow.cpp  GlottalFlow.h  GlottalFlowModel.h  GlottalFlowParameter.cpp  GlottalFlowParameter.h  GlottalFlowParameters.h  LFModel.cpp  LFModel.h  OneFormantFilter.cpp  OneFormantFilter.h  ScalarParameter.cpp  ScalarParameter.h  SourceGenerator.cpp  SourceGenerator.h  SourceModelApp.cpp  SourceModelApp.h  ToggleParameter.cpp  ToggleParameter.h  application.cpp  application.h  fzero.h  imgui_user.cpp  imgui_user.h  main.cpp  math_utils.h  platform.cpp  platform.h  shell.html
src/app/audio/: AudioTime.h  BufferedGenerator.cpp  BufferedGenerator.h  GainReductionComputer.cpp  GainReductionComputer.h  LookAheadGainReduction.cpp  LookAheadGainReduction.h
src/app/audio/rtaudio/: AudioDevices.cpp  AudioDevices.h  AudioOutput.cpp  AudioOutput.h
src/app/audio/webaudio/: AudioOutput.cpp  AudioOutput.h
src/app/integration/: NewtonCotes.cpp  NewtonCotes.h
src/app/math/: DTFT.cpp  DTFT.h  FrequencyScale.cpp  FrequencyScale.h  LTTB.cpp  LTTB.h  PinkNoise.h  utils.h  windows.h
src/app/math/filters/: AAF.h  Butterworth.cpp  Butterworth.h  FIRFilter.cpp  FIRFilter.h  SOSFilter.cpp  SOSFilter.h  SVFBiquad.cpp  SVFBiquad.h  SVFPiece.cpp  SVFPiece.h  zpk2sos.cpp
src/app/models/: KLGLOTT88.cpp  KLGLOTT88.h  LF.cpp  LF.h  LF_precomputed_Rd.cpp  LF_precomputed_Rd_double.inc.h  LF_precomputed_Rd_float.inc.h  RPlusPlus.cpp  RPlusPlus.h  RosenbergC.cpp  RosenbergC.h
src/app/models/precompute/: CMakeLists.txt  precompute.cpp
src/embed/: .gitignore  CMakeLists.txt  main.cpp
src/embed/include/: embed.hpp
